Fixed layout problems on Safari

--- a/wxplotjs/scss/wxplot-test.scss
+++ b/wxplotjs/scss/wxplot-test.scss
@@ -63,32 +63,33 @@ button {
     }
 }
 
-#plot-canvas {
+#plot-canvas-outer {
     position: relative;
     margin: 5px;
     width: 100%;
     min-height: 150px;
     flex: 1;
+}
 
-    /* Make the canvas container match the dimensions of plot-canvas */
-    & > * {
-        width: 100%;
-        height: 100%;
-    }
-
+#plot-canvas-inner {
     /* 
      * Position absolute is necessary to make the canvas to fill the available
      * space on iOS.
      */
-    & canvas {
-        position: absolute;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    /* Make the canvas container match the dimensions of plot-canvas-inner */
+    & > * {
+        width: 100%;
+        height: 100%;
     }
 }
 
 #top {
     display: flex;
     flex-flow: column;
-    /*min-height: 1px;*/
     flex: 1;
 }
 
@@ -106,7 +107,7 @@ button {
         width: 33%;
     }
 
-    #plot-canvas {
+    #plot-canvas-outer {
         width: 67%;
     }
 }
