--- a/wxplotjs/scss/wxplot.scss
+++ b/wxplotjs/scss/wxplot.scss
@@ -122,8 +122,8 @@ div.wxplot-interval-control {
 	}
 }
 
-#wxplot-legend, #wxplot-controls, #wxplot-canvas-box, #wxplot-controls input, 
-#wxplot-timespan-control-form input {
+#wxplot-legend, #wxplot-controls, #wxplot-canvas-box,
+#wxplot-controls input, #wxplot-timespan-control-form input {
 	font: 1rem sans-serif;
 }
 
